--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-indiana-drag-scroll": "^1.6.1",
+    "react-loader-spinner": "^3.1.14",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
